# PraisonAIUI

./: .dockerignore  .gitignore  404.html  AGENTS.md  BOOTSTRAP.md  CNAME  Dockerfile  PR_BODY.md  README.md  aiui.template.yaml  app.py  docs-nav.json  docs_hooks.py  framework_report.md  index.html  mkdocs.yml  objects.inv  pr_body.md  pr_body_update.md  prd.md  pyproject.toml  route-manifest.json  sitemap.xml  test_bridge.py  test_profiles_fix.yaml  test_validation.py  ui-config.json  ui-config.test.json
.agent/workflows/: analysis.md  e2e-analysis-issue-pr-merge.md  information.md  instruction.md
.github/: merge-conflict-test-marker.txt
.github/scripts/: ci-failure-claude.js  gate-config.js  merge-gate-selftest.js  merge-gate.js  pr-review-chain.js  release-gate-selftest.js
.github/workflows/: auto-issue-comment.yml  auto-pr-comment.yml  ci.yml  claude-merge-gate.yml  claude.yml  docs.yml  nightly-release-gate.yml  pypi-release.yml  sync-secrets-from-praisonai.yml
.windsurf/workflows/: analysis-github-issue-create.md  analysis.md  e2e-analysis-issue-pr-merge.md  gap_prompts.md  information.md  instruction.md  publish-release.md  security-audit.md
api/cli/: index.html
api/components/: index.html
api/features-api/: index.html
api/python/: index.html
api/sessions/: index.html
api/testing/: index.html
api/typescript/: index.html
assets/: common-types.js  index.css  index.js  index3.js  react_false.js  theme.css
concepts/architecture/: index.html
concepts/configuration/: index.html
concepts/providers/: index.html
concepts/slots/: index.html
concepts/templates/: index.html
docs/: CNAME  health-endpoints.md  index.md  testing.md
docs/api/: cli.md  components.md  features-api.md  health.md  index.html  python.md  sessions.md  testing.md  typescript.md
docs/concepts/: architecture.md  configuration.md  index.html  providers.md  slots.md  templates.md
docs/examples/: advanced.md  basic.md  index.html
docs/features/: a2ui-canvas.md  agent-ui-host.md  attachments.md  backend-integration.md  browser-automation.md  channel-chat-bridge.md  code-execution.md  comparison-openclaw.md  config-hot-reload.md  content-sources.md  css-architecture.md  dark-mode.md  dashboard.md  deployment.md  device-pairing.md  differentiation.md  feature-inventory.md  gap-analysis.md  gateway-chat.md  hot-reload.md  how-to-add-a-feature.md  i18n.md  image-preview-chat.md  index.html  integration-analysis.md  marketplace.md  media-analysis.md  message-elements.md  model-fallback.md  navigation.md  praisonai-package-integration.md  protocol-architecture.md  protocol-versioning.md  protocols.md  pwa.md  seo.md  sessions.md  standalone-vs-integrated.md  standardization-verification.md  steps.md  (+7 more)
docs/getting-started/: cli.md  github-pages.md  index.html  installation.md  quickstart.md
docs/health-endpoints/: index.html
docs/index/: index.html
docs/testing/: index.html
docs/typescript/: components.md  index.html  index.md  nextjs.md  runtime.md
examples/: README.md  rag_with_references.py
examples/advanced/: index.html
examples/agent-playground/: app.py
examples/basic/: index.html
examples/chat/: app.py
examples/chat-app/: app.py
examples/chat-with-ai/: app.py
examples/chat-with-praisonai/: app.py
examples/colorful/: aiui.template.yaml
examples/copilot-widget/: aiui.template.yaml  app.py
examples/corporate/: aiui.template.yaml
examples/dark-modern/: aiui.template.yaml
examples/dashboard/: app.py
examples/developer-portal/: aiui.template.yaml
examples/full-featured/: aiui.template.yaml
examples/minimal/: aiui.template.yaml
examples/praisonai-playground/: app.py
examples/provider-praisonai/: app.py
features/attachments/: index.html
features/browser-automation/: index.html
features/channel-chat-bridge/: index.html
features/code-execution/: index.html
features/comparison-openclaw/: index.html
features/config-hot-reload/: index.html
features/content-sources/: index.html
features/css-architecture/: index.html
features/dark-mode/: index.html
features/dashboard/: index.html
features/deployment/: index.html
features/device-pairing/: index.html
features/feature-inventory/: index.html
features/gap-analysis/: index.html
features/gateway-chat/: index.html
features/hot-reload/: index.html
features/i18n/: index.html
features/integration-analysis/: index.html
features/marketplace/: index.html
features/media-analysis/: index.html
features/model-fallback/: index.html
features/navigation/: index.html
features/protocol-architecture/: index.html
features/protocol-versioning/: index.html
features/protocols/: index.html
features/pwa/: index.html
features/seo/: index.html
features/sessions/: index.html
features/standardization-verification/: index.html
features/styles/: index.html
features/subagent-tree/: index.html
features/theme-system/: index.html
features/theming/: index.html
features/tts/: index.html
features/widget-zones/: index.html
getting-started/cli/: index.html
getting-started/github-pages/: index.html
getting-started/installation/: index.html
plugins/: content-loader.js  fetch-retry.js  homepage.js  mermaid.js  mkdocs-compat.js  nav-intercept.js  plugin-loader.js  plugins.json  syntax-highlight.js  toc.js  topnav.js
scripts/: patch_dashboard_modular.py
search/: search_index.json
src/frontend/: index.html  (+3 more)
testing/: index.html
tests/: README.md  conftest.py  test_all_gap_features.py  test_all_gaps.py  test_doctor_cli.py  test_examples_parity.py  test_feature_approvals.py  test_feature_channels.py  test_feature_chat.py  test_feature_config_runtime.py  test_feature_guardrails.py  test_feature_hooks.py  test_feature_memory.py  test_feature_nodes.py  test_feature_schedules.py  test_feature_sdk_backends.py  test_feature_sessions_ext.py  test_feature_skills.py  test_feature_surfaces.py  test_feature_workflows.py  test_features_e2e.py  test_gateway_integration.py  test_kanban_feature.py  test_mcp_connect_security.py  test_message_context.py
typescript/: index.html
(+583 files in other folders)
