[project]
name = "aiui"
version = "0.3.45"
description = "YAML-driven website generator - CLI and compiler"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mervin Praison"}
]
requires-python = ">=3.9"
keywords = ["aiui", "docs", "website", "generator", "yaml", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "watchfiles>=0.21",
    "rich>=13.0",
    "typer>=0.9",
    "uvicorn[standard]>=0.29",
    "starlette>=0.37",
    "pypdf>=4.0",
]

[project.optional-dependencies]
memory = [
    "chromadb>=1.0.0",
    "litellm>=1.81.0",
]

knowledge = [
    "mem0ai>=0.1.0",
    "chromadb>=1.0.0",
    "markitdown[all]>=0.1.0; python_version>='3.10'",
    "chonkie>=1.0.2",
]

graph = [
    "mem0ai[graph]>=0.1.0",
    "chromadb>=1.0.0",
]

all = [
    "aiui[memory]",
    "aiui[knowledge]",
    "aiui[graph]",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
aiui = "praisonaiui.cli:app"
praisonaiui = "praisonaiui.cli:app"

[project.urls]
Homepage = "https://github.com/MervinPraison/PraisonAIUI"
Documentation = "https://praisonai.com/docs/aiui"
Repository = "https://github.com/MervinPraison/PraisonAIUI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praisonaiui"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=praisonaiui --cov-report=term-missing"
