[project]
name = "aiui"
version = "0.3.109"
description = "YAML-driven website generator - CLI and compiler"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mervin Praison"}
]
requires-python = ">=3.10"
keywords = ["aiui", "docs", "website", "generator", "yaml", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "watchfiles>=0.21",
    "rich>=13.0",
    "typer>=0.9",
    "uvicorn[standard]>=0.29",
    "starlette>=0.37",
    "pypdf>=4.0",
]

[project.optional-dependencies]
memory = [
    "chromadb>=1.0.0",
    "litellm>=1.81.0",
]

knowledge = [
    "mem0ai>=0.1.0",
    "chromadb>=1.0.0",
    "markitdown[all]>=0.1.0; python_version>='3.10'",
    "chonkie>=1.0.2",
]

graph = [
    "mem0ai[graph]>=0.1.0",
    "chromadb>=1.0.0",
]

sql = [
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
]

postgres = [
    "aiui[sql]",
    "asyncpg>=0.29.0",
]

praisonai = [
    # Core agents SDK with knowledge support
    "praisonaiagents[knowledge,search,crawl]>=1.5.56",
    # PraisonAI wrapper (includes CLI, bots, gateway support)
    "praisonai[bot,api,os]>=2.0.0",
    # Gateway dependencies
    "fastapi>=0.115.0",
    "sse-starlette>=1.6.0",
    # Shell tools (get_system_info, list_processes)
    "psutil>=5.9.0",
    # Bot dependencies (Telegram, Discord, Slack)
    "python-telegram-bot>=20.0",
    "discord.py[voice]>=2.0.0",
    "slack_sdk>=3.0.0",
    "slack-bolt>=1.18.0",
]

bot = [
    "python-telegram-bot>=20.0",
    "discord.py[voice]>=2.0.0",
    "slack_sdk>=3.0.0",
    "slack-bolt>=1.18.0",
]

# Framework integrations (optional extras)
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

llama-index = [
    "llama-index>=0.9.0",
]

semantic-kernel = [
    "semantic-kernel>=1.0.0",
]

mcp = [
    "mcp>=0.9",
]

slack = [
    "slack_sdk>=3.0.0",
]

discord = [
    "discord.py[voice]>=2.0.0",
]

teams = [
    "botbuilder-core>=4.0.0",
    "botbuilder-schema>=4.0.0",
]

all = [
    "aiui[memory]",
    "aiui[knowledge]",
    "aiui[graph]",
    "aiui[sql]",
    "aiui[postgres]",
    "aiui[praisonai]",
    "aiui[bot]",
    "aiui[langchain]",
    "aiui[llama-index]",
    "aiui[semantic-kernel]",
    "aiui[mcp]",
    "aiui[slack]",
    "aiui[discord]",
    "aiui[teams]",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    # starlette.testclient requires httpx at runtime
    "httpx>=0.24",
    # Several integration and datastore tests import praisonaiagents
    # [llm] pulls in litellm which many integration paths require
    "praisonaiagents[llm]>=1.5.56",
    # MCP client tests require the mcp SDK
    "mcp>=0.9",
]

[project.scripts]
aiui = "praisonaiui.cli:app"
praisonaiui = "praisonaiui.cli:app"

[project.urls]
Homepage = "https://github.com/MervinPraison/PraisonAIUI"
Documentation = "https://praisonai.com/docs/aiui"
Repository = "https://github.com/MervinPraison/PraisonAIUI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praisonaiui"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Pragmatic ignores:
#   E501 — long string literals (error messages, SQL, URLs). Lines
#          over 100 chars in string bodies are kept for grep-ability.
#   E402 — module-level imports after sys.path manipulation or
#          availability checks are intentional.
#   E731 — single lambda assignments used as callbacks.
#   E741 — ambiguous single-letter names in legacy migration helpers.
ignore = ["E501", "E402", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
# Test files routinely bind mock variables that are never referenced
# again (they exist purely to keep the context-manager alive or to
# document what is being mocked).
"tests/**/*.py" = ["F841"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=praisonaiui --cov-report=term-missing"
